--- a/Calculator/App.xaml
+++ b/Calculator/App.xaml
@@ -13,6 +13,7 @@
             <Setter Property="Background" Value="Green"/>
             <Setter Property="TextAlignment" Value="Right"/>
             <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontSize" Value="50"/>
         </Style>
         <Style TargetType="Button" x:Key="orange">
             <Setter Property="Background" Value="Orange"/>
